# crossmidi

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  InputDeviceLogFrame.cpp  InputDeviceLogFrame.h  InputDevicePanel.cpp  InputDevicePanel.h  LICENSE  MainFrame.cpp  MainFrame.h  README.md  azure-pipelines.yml
include/crossmidi/: MidiMessage.hpp
src/midi-chrono/: App.cpp  App.h  BPMPanel.cpp  BPMPanel.h  CMakeLists.txt  Chrono.cpp  Chrono.h  ChronoFrame.cpp  ChronoFrame.h  DigitPanel.cpp  DigitPanel.h  TickPanel.cpp  TickPanel.h  TimeCodePanel.cpp  TimeCodePanel.h
src/midi-moni/: App.h  CMakeLists.txt  InputDeviceLogFrame.cpp  InputDeviceLogFrame.h  InputDevicePanel.cpp  InputDevicePanel.h
test/: CMakeLists.txt  test.cpp  test_midi_message.cpp
